# bsci

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: run_tests.yml
bsci/: __init__.py  bootstrapped_confidence_intervals.py
examples/: demo.py
tests/: test_bsci.py
