[metadata]
name = bsci
version = 1.0
url = https://github.com/famura/bsci
author = Fabio Muratore
author_email = fabio.muratore@famura.net
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
description = Constructing frequentist confidence intervals using the statistical bootstrap
keywords = statistical bootstrap, the bootstrap, confidence interval

[options]
zip_safe = True
packages = find:
python_requires = >=3.7, <4
install_requires = numpy

[options.extras_require]
dev = black; isort; matplotlib; pytest; pytest-cov
